# fakecompile

./: .gitignore  CMakeLists.txt  README.md
assets/: logo
examples/: compile on linux.md  example_with_time.md
lib/: README
src/: Color.h  fakecompile.cpp  fakecompile.h
src/compilers/: cmake.h  make.h  tpl.h
